@@ -1,3 +1,12 @@
+2007-03-20  Paul Brook  <paul@codesourcery.com>
+
+	* emultempl/armelf.em (pic_veneer): New variable.
+	(PARSE_AND_LIST_PROLOGUE): Add OPTION_PIC_VENEER.
+	(PARSE_AND_LIST_ARGS_CASES): Ditto.
+	(PARSE_AND_LIST_LONGOPTS): Add "pic-veneer".
+	(PARSE_AND_LIST_OPTIONS): Ditto.
+	* ld.texinfo: Document --pic-veneer.
+
 2007-03-18  Mark Shinwell  <shinwell@codesourcery.com>
 
 	* ld.texinfo: Document --no-enum-size-warning.
